--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,12 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "devCommand": "vite",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
   "env": {
     "VITE_FIREBASE_API_KEY": "",
     "VITE_FIREBASE_AUTH_DOMAIN": "",
